// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`10. tile star is rendered as already saved 1`] = `
<a
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <IconStar
    fillColour="#006699"
    height={18}
    opacity="1"
    strokeColour="none"
  />
</a>
`;

exports[`11. tile star is rendered as not yet saved 1`] = `
<a
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <IconStar
    fillColour="none"
    height={18}
    opacity="1"
    strokeColour="#696969"
  />
</a>
`;

exports[`12. tile star is disabled 1`] = `
<a
  onClick={[Function]}
  style={
    Object {
      "textDecoration": "none",
    }
  }
>
  <IconStar
    fillColour="none"
    height={18}
    opacity="0.4"
    strokeColour="#696969"
  />
</a>
`;
